# burrow-rs

./: Cargo.toml  Dockerfile  README.md  SECURITY.md  TODO.md  deny.toml  render.yaml
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml
client/src/: lib.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs
scripts/: demo.sh  run-http.ps1  test-integration.sh
server/: Cargo.toml
server/src/: lib.rs  main.rs
