[package]
name = "burrow-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "burrow"
path = "src/main.rs"

[dependencies]
burrow-common = { path = "../common" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
base64 = "0.22"
reqwest = { version = "0.12", features = ["stream"] }
clap = { version = "4", features = ["derive", "env"] }
tokio-stream = "0.1"
url = "2"
